# XLMate

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  PR_MESSAGE.md  SECURITY.md  package-lock.json  package.json
agent-engines/: README.md  main.py  pyproject.toml
agent-engines/gpu_worker/: __init__.py  batch.py  config.py  models.py  pool.py  resource_monitor.py  uci_bridge.py  worker.py
agent-engines/orchestration/: __init__.py  config.py  health.py  models.py  node.py  registry.py  router.py  scheduler.py
agent-engines/personality/: __init__.py  config.py  evaluator.py  presets.py  profile.py  style_analyzer.py  trainer.py  tuner.py
agent-engines/tests/: test_batch.py  test_evaluator.py  test_health.py  test_node.py  test_pool.py  test_presets.py  test_profile.py  test_registry.py  test_router.py  test_scheduler.py  test_style_analyzer.py  test_trainer.py  test_tuner.py  test_uci_bridge.py  test_worker.py
backend/modules/api/: Cargo.toml
backend/modules/api/src/: lib.rs  server.rs
backend/modules/challenge/: Cargo.toml
backend/modules/challenge/src/: api.rs  lib.rs  puzzle_validation.rs
backend/modules/security/src/: jwt.rs
contracts/: Cargo.toml
contracts/ai_nft/: Cargo.toml
contracts/ai_nft/src/: lib.rs
contracts/ai_nft/test_snapshots/tests/: test_ai_nft_mint_and_transfer.1.json  test_metadata_hash_association.1.json  test_multiple_nft_minting.1.json
contracts/emergency_circuit_breaker/: Cargo.toml
contracts/emergency_circuit_breaker/src/: lib.rs
contracts/game_contract/src/: lib.rs  test.rs
contracts/game_contract/test_snapshots/tests/: test_claim_puzzle_reward_invalid_sig.1.json  test_claim_puzzle_reward_replay_rejected.1.json  test_claim_puzzle_reward_valid_sig.1.json  (+13 more)
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/puzzles/: page.tsx
frontend/components/: ClientRoot.tsx  GameModeButtons.tsx  GameSidebar.tsx  Header.tsx  TransactionStatusIndicator.tsx  WalletConnectModal.tsx  Web3StatusBar.tsx
frontend/components/chess/: CheatDetectionPanel.tsx  ChessboardComponent.tsx  ConnectionStatusIndicator.tsx  PgnExportArchive.tsx
frontend/components/profile/: EloRatingChart.tsx  SessionManager.tsx
frontend/components/ui/: LoadingSkeleton.tsx  toast.tsx
frontend/context/: authContext.tsx  matchmakingContext.tsx  transactionContext.tsx
frontend/hook/: useCheatDetection.ts  useChessSocket.ts  useEnhancedChessSocket.ts  useMatchmaking.ts  useTrackedTransaction.ts
frontend/lib/: cheatDetection.ts
programs/match-escrow/: Cargo.toml
programs/match-escrow/src/: lib.rs
tests/: match-escrow-bankrun.ts  match-escrow.ts
(+2 files in other folders)
