[project]
name = "agent-engines"
version = "0.1.0"
description = "AI engine infrastructure for XLMate chess platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "asyncio-extras>=1.3; python_version<'3.12'",
    "psutil>=5.9",
    "chess>=1.10",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
