[package]
name = "match-escrow"
version = "0.1.0"
description = "Time-locked escrow for match deposits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "match_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
