[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4"
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
validator_types = "0.16"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
db = { path = "../db" }
dto = { path = "../dto" }
service = { path = "../service" }
matchmaking = { path = "../matchmaking" }
error = { path = "../error" }
security = { path = "../security" }
chess = { path = "../chess" }
challenge = { path = "../challenge" }
actix-cors = "0.7.0"
utoipa-redoc = { version = "3", features = ["actix-web"] }
url = "=2.5.0"
indexmap = "=2.2.6"
db_entity = { path = "../db/entity" }
actix-governor = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-rt = "2.9"

