[package]
name = "challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shakmaty = "0.23.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
jsonwebtoken = "9.3.1"
security = { path = "../security" }
actix-web = "4"
